syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rkuprov/mbot/pkg/gen/mbotpb";

service MBotServerService {
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse) {}
  rpc GetCustomer (GetCustomerRequest) returns (GetCustomerResponse) {}
  rpc GetCustomersAll (GetCustomersAllRequest) returns (GetCustomersAllResponse) {}
  rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerResponse) {}
  rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse) {}

  rpc CreateSubscription (CreateSubscriptionRequest) returns (CreateSubscriptionResponse) {}
  rpc GetSubscription (GetSubscriptionRequest) returns (GetSubscriptionResponse) {}
  rpc GetSubscriptionsAll (GetSubscriptionsAllRequest) returns (GetSubscriptionsAllResponse) {}
  rpc UpdateSubscription (UpdateSubscriptionRequest) returns (UpdateSubscriptionResponse) {}
  rpc DeleteSubscription (DeleteSubscriptionRequest) returns (DeleteSubscriptionResponse) {}
  rpc GetSubscriptionByCustomer (GetSubscriptionByCustomerRequest) returns (GetSubscriptionByCustomerResponse) {}

  rpc GetStatsByCustomer (GetStatsByCustomerRequest) returns (GetStatsByCustomerResponse) {}
  rpc GetStatsBySubscription (GetStatsBySubscriptionRequest) returns (GetStatsBySubscriptionResponse) {}
  rpc GetStatsAll (GetStatsAllRequest) returns (GetStatsAllResponse) {}

}

message CreateCustomerRequest {
  string name = 2;
  string email = 3;
  string contact = 4;

}

// The response message containing the greetings.
message CreateCustomerResponse {
  string slug = 1;
  string subscription_id = 2;
  string message = 3;
}

message Customer {
  string slug = 1;
  string name = 2;
  string email = 3;
  string contact = 4;
  repeated string subscription_id = 5;
}

message GetCustomerRequest {
  string slug = 1;
}

message GetCustomerResponse {
  Customer customer = 1;
}

message GetCustomersAllRequest {
}

message GetCustomersAllResponse {
  repeated Customer customers = 1;
}

message UpdateCustomerRequest {
  string slug = 1;
  string name = 2;
  string email = 3;
  string contact = 4;
}

message UpdateCustomerResponse {
  string message = 1;
}

message DeleteCustomerRequest {
  string slug = 1;
}

message DeleteCustomerResponse {
  string message = 1;
}

message Subscription {
  string subscription_id = 1;
  google.protobuf.Timestamp subscription_expiry = 2;
}

message CreateSubscriptionRequest {
  string slug = 1;
  google.protobuf.Timestamp subscription_expiry = 2;
}

message CreateSubscriptionResponse {
  string message = 1;
  string slug = 2;
  Subscription subscription = 3;
}

message GetSubscriptionRequest {
  string subscription_id = 1;
}

message GetSubscriptionResponse {
  GetCustomerResponse customer = 1;
  Subscription subscription = 2;
}

message UpdateSubscriptionRequest {
  string subscription_id = 1;
  string subscription_expiry = 2;
}

message UpdateSubscriptionResponse {
  string message = 1;
}

message DeleteSubscriptionRequest {
  string subscription_id = 1;
}

message DeleteSubscriptionResponse {
  string message = 1;
}

message GetSubscriptionsAllRequest {
}

message GetSubscriptionsAllResponse {
  repeated GetSubscriptionResponse subscriptions = 1;
}

message GetSubscriptionByCustomerRequest {
  string slug = 1;
}

message GetSubscriptionByCustomerResponse {
  GetSubscriptionResponse subscription = 1;
}

message GetStatsByCustomerRequest {
  string slug = 1;
}

message GetStatsByCustomerResponse {
  string message = 1;
}

message GetStatsBySubscriptionRequest {
  string subscription_id = 1;
}

message GetStatsBySubscriptionResponse {
  string message = 1;
}

message GetStatsAllRequest {
}

message GetStatsAllResponse {
  string message = 1;
}